namespace ProjectS
{
    public class PlayerModel
    {
        public PlayerModel()
        {
            
        }
    }
}